# whatyousay

./: .gitignore  CLAUDE.md  MODELS.md  README.md  SPEC.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: android.yml  web.yml
app/: build.gradle.kts
app/src/androidTest/java/ai/whatyousay/: Phase1PipelineTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
app/src/main/java/ai/whatyousay/: AppContainer.kt  MainActivity.kt  WhatYouSayApp.kt
app/src/main/java/ai/whatyousay/core/: ConversationEngine.kt  Language.kt  LanguageId.kt  Pipeline.kt
app/src/main/java/ai/whatyousay/data/: AppSettings.kt
app/src/main/java/ai/whatyousay/design/: Theme.kt
app/src/main/java/ai/whatyousay/engine/: ArchiveExtractor.kt  AudioCapture.kt  AudioPlayer.kt  ConversationController.kt  ConversationService.kt  FileModelManager.kt  LlamaBridge.kt  ModelInstallPlan.kt  ModelManager.kt  ModelManifest.kt  NativeVoice.kt  PipelineFactory.kt  PushToTalkRecorder.kt  SimulatedModelManager.kt  Speaker.kt  StubPipeline.kt  VoiceEngine.kt
app/src/main/java/ai/whatyousay/feature/conversation/: ConversationScreen.kt  ConversationViewModel.kt
app/src/main/java/ai/whatyousay/feature/onboarding/: OnboardingScreen.kt  OnboardingViewModel.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/sherpa/: README.md
app/src/sherpa/kotlin/ai/whatyousay/engine/sherpa/: SherpaVoiceFactory.kt
app/src/test/java/ai/whatyousay/: ConversationControllerTest.kt  CoreTest.kt  FileModelManagerTest.kt  ModelInstallPlanTest.kt  SimulatedModelManagerTest.kt
gradle/: libs.versions.toml
training/: .gitignore  README.md  config.py  eval.py  export_gguf.py  prep_data.py  requirements.txt  train_qlora.py
web/: index.html
web-next/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts
web-next/app/: globals.css  layout.tsx  page.tsx
web-next/app/api/waitlist/: route.ts
web-next/components/: Hero.tsx  Nav.tsx  Reveal.tsx  Waitlist.tsx
web-next/convex/: http.ts  schema.ts  waitlist.ts
